--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(to right, #46e1c2, #34c99f); /* Turquoise to green gradient */
+}
